bake git hash and build date into final app binary. provide 'app -v' and '/-/version' endpoint to retrieve
