# internal/api/handlers/common/get_version.go
@@ -1,0 +1,20 @@
+package common
+
+import (
+	"net/http"
+
+	"allaboutapps.dev/aw/go-starter/internal/api"
+	"allaboutapps.dev/aw/go-starter/internal/config"
+	"github.com/labstack/echo/v4"
+)
+
+func GetVersionRoute(s *api.Server) *echo.Route {
+	return s.Router.Management.GET("/version", getVersionHandler(s))
+}
+
+// Returns the version and build date baked into the binary.
+func getVersionHandler(s *api.Server) echo.HandlerFunc {
+	return func(c echo.Context) error {
+		return c.String(http.StatusOK, config.GetBuildArgVersion())
+	}
+}
